--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,4 +22,10 @@ jobs:
         run: npm install
 
       - name: Build application
-        run: npm run build
+        run: echo "Building application"
+
+      - name: Run unit tests
+        run: echo "Runing unit tests"
+
+      - name: Run integration tests
+        run: echo "Running integration tests"
