simulate CI failure

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
           cache: "npm"
 
       - name: Install depencencies
-        run: npm instal
+        run: n install
 
       - name: Build application
         run: echo "Building application"
