--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,4 +19,13 @@ jobs:
         run: docker build -t nodejs-test-app:latest .
 
       - name: Tag Docker Image
-        run: docker tag nodejs-test-app:latest pheyishayor001/nodejs-test-app:latest
+        run: docker tag nodejs-test-app:latest ${{ secrets.DOCKER_USERNAME }}/nodejs-test-app:latest
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker Image to Docker Hub
+        run:  docker push ${{ secrets.DOCKER_USERNAME }}/nodejs-test-app:latest
